[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "toolbox"
version = "0.1.0"
description = "A small CLI toolbox for the accounting team."
authors = [{name="Joe Chevalier", email="joe.chevalier@onedigital.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "pandas",
    "pyarrow"
]

[project.urls]
Homepage = "https://github.com/CPAanalytics/toolbox"

[project.scripts]          # creates the top-level executable
toolbox = "toolbox.cli:cli"
